# cdc-streamer

./: Cargo.toml  readme.MD
config/: config.yaml
docker/: docker-compose.yml
src/: lib.rs  main.rs
src/cdc/: engine.rs  events.rs  mod.rs
src/config/: mod.rs
src/connectors/: mod.rs  postgres.rs  scylla.rs
src/streaming/: kafka.rs  redis.rs
